<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:paddingBottom="12dp"
    android:layout_marginTop="8dp"
    tools:ignore="SpUsage, ContentDescription">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/rounded_transparent_bg"
        android:scaleType="centerCrop"
        android:src="@drawable/cover"
        android:translationY="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_product_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom_gray"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:clipToPadding="false"
        android:paddingTop="12dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_logo"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:clipToPadding="false"
            android:layout_gravity="center_vertical"
            app:cardCornerRadius="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@drawable/circle_with_border"
                android:elevation="10dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                tools:src="@drawable/sample_drawable" />


            <TextView
                android:id="@+id/logoText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange"
                android:textAlignment="center"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="32dp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="A" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/storeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="16dp"
                android:textStyle="bold"
                tools:text="@string/sampleStoreName" />

            <TextView
                android:id="@+id/storeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="14dp"
                tools:text="@string/sampleStoreDescription" />

            <TextView
                android:id="@+id/productCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="12dp"
                android:gravity="center"
                app:drawableStartCompat="@drawable/ic_cart"
                tools:text="@string/sampleStoreName"
                app:drawableTint="@color/orange" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_white_bg"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintEnd_toEndOf="@id/image">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingEnd="8dp"
            android:text="@string/follow"
            android:textAllCaps="true"
            app:drawableStartCompat="@drawable/ic_add"
            app:drawableTint="@color/orange"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>